fix player background repeating + character gear box getting squished

--- a/src/interface/report/Results/PlayerInfo.scss
+++ b/src/interface/report/Results/PlayerInfo.scss
@@ -5,6 +5,10 @@
   flex-direction: column;
   gap: 2rem;
 
+  @media (min-width: 750px) {
+    min-width: 450px; // keep this from getting squished, even if it means it flows under the stat box
+  }
+
   .character-sheet {
     border-radius: 1rem;
     border: 1px solid #202020;
@@ -19,6 +23,10 @@
   .class-background {
     background-position: center;
     background-size: cover;
+  }
+
+  .player-background {
+    background-repeat: no-repeat;
   }
 
   .player-gear {
